# uni5db

./: Cargo.toml  todo.md
docs/: MYSQL_COMPAT_PLAN.md  MYSQL_TODO.md  POSTGRES_COMPAT_PLAN.md  TEST_COVERAGE.md  sql_limit_perf.md  sql_profile.md
scripts/: compaction_profile_tmpfs.sh  local_presubmit.sh  memory_guard.sh  sql.test  unidb-memory-guard.service
src/: catalog.rs  codec.rs  datafusion_bridge.rs  error.rs  filter.rs  kv_engine_store.rs  lib.rs  main.rs  mem_store.rs  mode.rs  sql.rs  storage_layout.rs  types.rs
src/catalog/: codec.rs  legacy.rs  store.rs  tests.rs  types.rs
src/core/: execution.rs  mod.rs  response.rs  server.rs
src/datafusion_bridge/: arrow_response.rs  mysql_information_schema.rs  pg_catalog_rows.rs  pg_catalog_types.rs  pg_type_rows.rs  physical_exec.rs  physical_planner.rs  physical_predicates.rs  scan_runtime.rs  stats_and_catalogs.rs  table_provider_base.rs  table_provider_load.rs  table_provider_scans.rs  table_provider_topn.rs  table_provider_trait.rs  tests.rs
src/dialect/: mod.rs  mysql.rs  parser.rs  postgres.rs
src/kv_engine_store/: aggregate_scan.rs  fast_numeric_eval.rs  fast_numeric_plan.rs  profile.rs  projected_aggregate.rs  store.rs  tests.rs  transaction.rs
src/protocol/: mod.rs  mysql.rs  postgres.rs
src/sql/: eval_core.rs  fast_path.rs  functions.rs  json.rs  operators.rs  projection.rs  tests.rs  values.rs
src/storage_layout/: cursor.rs  fast_row_decode.rs  keys.rs  olap_stats.rs  row_codec.rs  tests.rs  tuple_codec.rs
src/types/: column_value.rs  data_type.rs  query_plan.rs  row.rs  schema.rs  (+1 more)
(+84 files in other folders)
